--- a/src/css/default.css
+++ b/src/css/default.css
@@ -4,6 +4,7 @@
 *::before{box-sizing: border-box;}
 ul,ol{list-style: none;}
 a{color: inherit; text-decoration: none;}
+input{font: inherit;}
 
 body{
     font-size: 12px;
@@ -21,7 +22,7 @@ body{
 }
 .page > main{
     flex-grow: 1;   /* 自适应 */
-    border: 1px solid green;
+    padding-left: 20px;    
 }
 
 /* aside */
@@ -63,6 +64,49 @@ body{
 }
 .clickable{
     cursor:pointer;
+}
+
+
+/* main */
+.page > main{
+    background: #ddd;
+}
+.form{
+    font-size: 14px;
+}
+.form  > .row{
+    margin: 20px 0;
+    display: flex;
+}
+.form  > .row > label{
+    width: 4em;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-right: 5px;
+}
+.form  > .row.actions{
+    margin-left: calc(4em + 5px);
+}
+.form input[type=text]{
+    padding: 3px 8px;
+    border-radius: 5px;
+    border: 1px solid #ddd;
+    height: 30px;
+}
+.form input[type=button],
+.form input[type=submit],
+.form button{
+    height: 30px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 5px;
+}
+.page > main {
+    padding-top: 20px;
+}
+.page > main > .form {
+
 }
 
 
